==> zqhkd/AFC-7Published/AFCTarget/CM33/DevLIB/W25QXX.c <==
#include "W25QXX.h"
#include "main.h"
#include "fatfs.h"
#include <stdio.h>
#include <string.h>
#define W25QXX_FILE 0
#define W25QXX_DMA  1
#define W25QXX_MODE W25QXX_FILE
#define MAX_FLOAT_NUM_W25QXX  120

uint8_t W25QXX_Init(void)
{	
    uint8_t temp;//瀹氫箟涓€涓彉閲弔emp
		HAL_GPIO_WritePin(GPIOB,  GPIO_PIN_12, GPIO_PIN_SET);
    W25QXX_CS(1);//0鐗囬€夊紑鍚紝1鐗囬€夊叧闂
//	if(HAL_GPIO_ReadPin(GPIOB,  GPIO_PIN_12)!= GPIO_PIN_SET)
//	Error_Handler();
//	HAL_GPIO_ReadPin(GPIOD,  GPIO_PIN_10);
    W25QXX_TYPE = W25QXX_ReadID();//璇诲彇FLASH  ID.
    if(W25QXX_TYPE == W25Q01JV)//SPI FLASH涓篧25Q256鏃舵墠鐢ㄨ缃负4瀛楄妭鍦板潃妯″紡
    {
       temp = W25QXX_ReadSR(3);//璇诲彇鐘舵€佸瘎瀛樺櫒3锛屽垽鏂湴鍧€妯″紡
       if((temp&0x01)==0)//濡傛灉涓嶆槸4瀛楄妭鍦板潃妯″紡,鍒欒繘鍏4瀛楄妭鍦板潃妯″紡
       {
           W25QXX_CS(0);//0鐗囬€夊紑鍚紝1鐗囬€夊叧闂
           SPI1_ReadWriteByte(W25X_Enable4ByteAddr);//鍙戦€佽繘鍏4瀛楄妭鍦板潃妯″紡鎸囦护
           W25QXX_CS(1);//0鐗囬€夊紑鍚紝1鐗囬€夊叧闂
       }
    }
		return temp;
}

void W25QXX_CS(uint8_t a)//杞欢鎺у埗鍑芥暟锛0涓轰綆鐢靛钩锛屽叾浠栧€间负楂樼數骞筹級
{
    if(a==0)HAL_GPIO_WritePin(W25Q128_CS_GPIO_Port, W25Q128_CS_Pin, GPIO_PIN_RESET);
    else  HAL_GPIO_WritePin(W25Q128_CS_GPIO_Port,  W25Q128_CS_Pin, GPIO_PIN_SET);

}

void W25QXX_Erase_Sector(uint32_t Dst_Addr)
{
    Dst_Addr*=4096;
    W25QXX_Write_Enable();//SET WEL
    W25QXX_Wait_Busy();
    W25QXX_CS(0);//0鐗囬€夊紑鍚紝1鐗囬€夊叧闂
    SPI1_ReadWriteByte(W25X_SectorErase);//鍙戦€佹墖鍖烘摝闄ゆ寚浠
    if(W25QXX_TYPE==W25Q01JV)//濡傛灉鏄疻25Q256鐨勮瘽鍦板潃涓4瀛楄妭鐨勶紝瑕佸彂閫佹渶楂8浣
    {
         SPI1_ReadWriteByte((uint8_t)((Dst_Addr)>>24));
    }
    SPI1_ReadWriteByte((uint8_t)((Dst_Addr)>>16));//鍙戦€24bit鍦板潃
    SPI1_ReadWriteByte((uint8_t)((Dst_Addr)>>8));
    SPI1_ReadWriteByte((uint8_t)Dst_Addr);
    W25QXX_CS(1);//0鐗囬€夊紑鍚紝1鐗囬€夊叧闂
    W25QXX_Wait_Busy();//绛夊緟鎿﹂櫎瀹屾垚
}
